# windows-monitor-rotator

./: CMakeLists.txt  README.md  generate_icon.py  main.cpp  resource.rc
